updated `BubbleML/UI/README.md` and tested

--- a/BubbleML/UI/form.ui
+++ b/BubbleML/UI/form.ui
@@ -301,7 +301,7 @@
         </font>
        </property>
        <property name="text">
-        <string>This is a working prototype</string>
+        <string>Prototype!</string>
        </property>
       </widget>
      </widget>
@@ -383,7 +383,7 @@
         </font>
        </property>
        <property name="text">
-        <string>This is a working prototype</string>
+        <string>Prototype!</string>
        </property>
       </widget>
      </widget>
@@ -934,7 +934,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
         </font>
        </property>
        <property name="text">
-        <string>This is a working prototype</string>
+        <string>Prototype!</string>
        </property>
       </widget>
       <widget class="QGraphicsView" name="latentCoeffPlot">
@@ -1246,7 +1246,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
         </font>
        </property>
        <property name="text">
-        <string>This is a working prototype</string>
+        <string>Prototype!</string>
        </property>
       </widget>
      </widget>
@@ -1310,7 +1310,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
         </font>
        </property>
        <property name="text">
-        <string>This is a working prototype</string>
+        <string>Prototype!</string>
        </property>
       </widget>
      </widget>
@@ -1557,7 +1557,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
         </font>
        </property>
        <property name="text">
-        <string>This is a working prototype</string>
+        <string>Prototype!</string>
        </property>
       </widget>
      </widget>
